--- a/urbanize.html
+++ b/urbanize.html
@@ -435,12 +435,24 @@
         <li>Добавлен молоток и корзина с ягодами и орехами для людей, выполняющих определенные анимации, а также исправлена недостающая бутылка в других анимациях.</li>
         <li>Добавлено 600 деревянных заборов по всему San Andreas.</li>
     </ul>
-    <a href="https://sharemods.com/tj3yv4vkemy6/SA_-_Urbanize_10-24___40_poi5zsq0z81__41_.zip.html" target="_blank">
+</div>
+
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/hNTKL6NHIZc" title="Обзор мода [SA] Urbanize Версия 01-25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 01-25</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+        <li>Добавлено 100 бандитских группировок по всему Сан-Андреасу! Они разного размера, в переулках и других местах за тротуаром, как будто это собрания или собрания. Люди, машины, оружие и агрессивные реакции — все интегрировано в оригинальную игровую систему. Также есть несколько локаций за пределами стандартных территорий банд для модов, добавляющих новые банды, например, в Лас-Вентурасе.</li>
+        <li>Добавлены люди, играющие в баскетбол на двух площадках Лас Вентураса.</li>
+        <li>Некоторые исправления стабильности и выбор анимации разговора.</li>
+        <li>Добавлено еще 500 объектов забора по всему Сан-Андреасу, обычно заполняющих местность, которую Rockstar «забыли» разместить.</li>
+    </ul>
+    <a href="https://sharemods.com/l0bha5h2el59/SA_-_Urbanize_11-24___40_c0l1qzign4__41_.zip.html" target="_blank">
         <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
-            Скачать Urbanize 10-24
+            Скачать Urbanize 01-25
         </button>
     </a>
-</div>
+</div>		
 
 <!-- Повторите блок video-item для дополнительных видео -->
 
