--- a/mods.html
+++ b/mods.html
@@ -1408,6 +1408,9 @@
         <li>
             <strong>Dealer Weapons</strong>
         </li>
+	<li>
+            <strong>Death animations Ragdoll Style v2.0</strong>
+        </li>
         <li>
             <strong>Death animations</strong>
         </li>
