--- a/mods.html
+++ b/mods.html
@@ -1580,7 +1580,7 @@
             <strong>Jetpack Adjuster</strong>
         </li>
         <li>
-            <strong>Kill Cam</strong>
+            <strong>Kill Cam v1.4</strong>
         </li>
         <li>
             <strong>Lamppost Insects</strong>
