--- a/mods.html
+++ b/mods.html
@@ -142,43 +142,49 @@
     <h2>Graphic Mods</h2>
     <ul>
         <li>
-            <strong>ReShade 6.3.3</strong>
-        </li>
-        <li>
-            <strong>SA.Project2DFX v4.4</strong>
-        </li>
-        <li>
-            <strong>SkyGfx Extended v1.7</strong>
-        </li>
-        <li>
-            <strong>IMFX v17.11.2017t</strong>
-        </li>
-        <li>
-            <strong>Real Skybox v1.3.4</strong>
-        </li>
-        <li>
-            <strong>GraphicsTweaker v1.3</strong>
-        </li>
-        <li>
-            <strong>SkyGrad</strong>
-        </li>
-        <li>
-            <strong>Improved Streaming v1.0.1</strong>
-        </li>
-        <li>
             <strong>ColorMod v2</strong>
-        </li>
-        <li>
-            <strong>Shadows Settings Extender v2.1.2</strong>
         </li>
         <li>
             <strong>Enhance ParticleTXD v1.0</strong>
         </li>
         <li>
-            <strong>FxsFuncs v1.1b47</strong>
+            <strong>GraphicsTweaker v1.3</strong>
+        </li>
+        <li>
+            <strong>IMFX v17.11.2017t</strong>
+        </li>
+        <li>
+            <strong>Improved Streaming v1.0.1</strong>
+        </li>
+        <li>
+            <strong>Mobile Font Fixed</strong>
+        </li>
+        <li>
+            <strong>Mobile Hud</strong>
         </li>
         <li>
             <strong>NextGen and Combat FX Plus</strong>
+        </li>
+        <li>
+            <strong>SA.Project2DFX v4.4</strong>
+        </li>
+        <li>
+            <strong>Real Skybox v1.3.4</strong>
+        </li>
+        <li>
+            <strong>ReShade 6.3.3</strong>
+        </li>
+        <li>
+            <strong>Shadows Settings Extender v2.1.2</strong>
+        </li>
+        <li>
+            <strong>SkyGfx Extended v1.7</strong>
+        </li>
+        <li>
+            <strong>SkyGrad</strong>
+        </li>
+        <li>
+            <strong>FxsFuncs v1.1b47</strong>
         </li>
         <li>
             <strong>Dynamic Shadow Color v1.0</strong>
@@ -189,10 +195,10 @@
         <li>
             <strong>ENB Series Auto Toggle</strong>
         </li>
-        <li>
+	<li>
             <strong>Enhanced Classic Graphics v1.2</strong>
         </li>
-        <li>
+	<li>
             <strong>SAMP Graphic Restore</strong>
         </li>
     </ul>
