--- a/mods.html
+++ b/mods.html
@@ -1829,6 +1829,12 @@
             <strong>Sun</strong>
         </li>
 	<li>
+            <strong>SWAT Helicopter</strong>
+        </li>
+	<li>
+            <strong>SWAT Helicopter with 5 stars Plus</strong>
+        </li>
+	<li>
             <strong>Swat Pos</strong>
         </li>
         <li>
