--- a/mods.html
+++ b/mods.html
@@ -1570,6 +1570,9 @@
         <li>
             <strong>IndieVehHandlings</strong>
         </li>
+	<li>
+            <strong>Inmune Headshot/strong>
+        </li>
         <li>
             <strong>Insects Mod</strong>
         </li>
