--- a/mods.html
+++ b/mods.html
@@ -1642,6 +1642,9 @@
         <li>
             <strong>NoRadio</strong>
         </li>
+	<li>
+            <strong>NPC Health Indicator</strong>
+        </li>
         <li>
             <strong>One Wanted Star Melee Fix</strong>
         </li>
