--- a/mods.html
+++ b/mods.html
@@ -610,6 +610,9 @@
         <li>
             <strong>Fix Damage From Explosions Through Walls</strong>
         </li>
+	<li>
+            <strong>Fixed dialogues with gangs</strong>
+        </li>
         <li>
             <strong>Fixed Mouse Flight</strong>
         </li>
