--- a/mods.html
+++ b/mods.html
@@ -1553,7 +1553,7 @@
             <strong>High Noon Fix</strong>
         </li>
 		<li>
-            <strong>Hitscan Sniper</strong>
+            <strong>Hit Scan Sniper</strong>
         </li>
 		<li>
             <strong>Hood Fellas Shooting Dice</strong>
