--- a/mods.html
+++ b/mods.html
@@ -871,7 +871,7 @@
             <strong>Car Wash</strong>
         </li>
         <li>
-            <strong>Car+Prop Collision Light</strong>
+            <strong>Car Collision Light</strong>
         </li>
         <li>
             <strong>Carcols Fix</strong>
