--- a/mods.html
+++ b/mods.html
@@ -1679,7 +1679,7 @@
             <strong>Police Dept Fix</strong>
         </li>
         <li>
-            <strong>Quick Map</strong>
+            <strong>Quick Map v29.05.2024</strong>
         </li>
         <li>
             <strong>Quick Weapon Draw</strong>
