--- a/mods.html
+++ b/mods.html
@@ -1625,7 +1625,7 @@
             <strong>Money Drop Fix</strong>
         </li>
         <li>
-            <strong>More Radar Icons v2.5</strong>
+            <strong>More Radar Icons Update (10/1/2025)</strong>
         </li>
 	<li>
             <strong>News Paper v2.0</strong>
