--- a/mods.html
+++ b/mods.html
@@ -1708,6 +1708,9 @@
         <li>
             <strong>Cleo Real Time</strong>
         </li>
+	<li>
+            <strong>Real Weapons Names</strong>
+        </li>
         <li>
             <strong>Realistic Beach</strong>
         </li>
