--- a/mods.html
+++ b/mods.html
@@ -703,6 +703,9 @@
         <li>
             <strong>ASI Real Time</strong>
         </li>
+	<li>
+            <strong>ReverbSA</strong>
+        </li>
         <li>
             <strong>Road Reflection Fix</strong>
         </li>
