--- a/mods.html
+++ b/mods.html
@@ -1898,7 +1898,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills v3.0</strong>
+            <strong>Weapon Detaills v3.0 12.01.2025</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
