--- a/mods.html
+++ b/mods.html
@@ -1421,7 +1421,7 @@
             <strong>Death animations Ragdoll Style v2.0</strong>
         </li>
         <li>
-            <strong>Death animations</strong>
+            <strong>DeathAnimsMod v2.0 (13.01.2025)</strong>
         </li>
         <li>
             <strong>Difficult Move In Water</strong>
