--- a/mods.html
+++ b/mods.html
@@ -252,6 +252,12 @@
             </div>
         </li>
 	<li>
+            <strong>Proper Player Retex 2.0</strong>
+            <div class="button-container" style="text-align: center;">
+                <a href="https://mega.nz/file/fAcC3RZY#gE1gfhdN09Vev2AWph2MdrfivjtvStz-RG3cGfD5wZI" class="download-btn">Download Proper Player Retex 2.0</a>
+            </div>
+        </li>
+	<li>
             <strong>Proper Player Retex v3</strong>
             <div class="button-container" style="text-align: center;">
                 <a href="https://sharemods.com/py0xnfo09h2j/Proper_Player_Retex.7z.html" class="download-btn">Download Proper Player Retex v3</a>
