--- a/mods.html
+++ b/mods.html
@@ -252,7 +252,7 @@
             </div>
         </li>
 	<li>
-            <strong>Proper Player Retex 2.0</strong>
+            <strong>Proper Player Retex v2.0</strong>
             <div class="button-container" style="text-align: center;">
                 <a href="https://mega.nz/file/fAcC3RZY#gE1gfhdN09Vev2AWph2MdrfivjtvStz-RG3cGfD5wZI" class="download-btn">Download Proper Player Retex 2.0</a>
             </div>
