--- a/mods.html
+++ b/mods.html
@@ -1989,7 +1989,7 @@
             <strong>Gangster Walk Fix</strong>
         </li>
         <li>
-            <strong>Garbage Truck Driver</strong>
+            <strong>Garbage Truck Driver v1.1</strong>
         </li>
         <li>
             <strong>Grove Vs Ballas Fight</strong>
