--- a/mods.html
+++ b/mods.html
@@ -716,7 +716,7 @@
             <strong>ASI Real Time</strong>
         </li>
 	<li>
-            <strong>ReverbSA</strong>
+            <strong>ReverbSA v1.0</strong>
         </li>
         <li>
             <strong>Road Reflection Fix</strong>
