--- a/mods.html
+++ b/mods.html
@@ -266,7 +266,7 @@
 	<li>
             <strong>Original Peds Vary Extended (Fixed)</strong>
             <div class="button-container" style="text-align: center;">
-                <a href="https://mega.nz/file/fUdwhBYS#UUNplWlmZvJksW62q56fUeJoMlYqTSvNLAHG8BsCKrI" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
+                <a href="https://mega.nz/file/uF9mRYJS#WCiFs7empazXLkdEPUY0nj8PIMYi3A0KAmsERHnVy4Y" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
             </div>
         </li>
         <li>
