--- a/mods.html
+++ b/mods.html
@@ -479,6 +479,11 @@
 			<div class="button-container" style="text-align: center;">
             <a href="https://download1322.mediafire.com/ntbzc2oi31cg3vSYMYtwDVrPFMaYb60q_hSTMNGBvN-Dmr3JddWe7iJPjFkUOtlhrDCIgMvnPicVWasDQ0MRIITB4XwOQQU2UjwUcBFXN_a2Ggqe9P6ajOoJAKR0Qwv3cswV8namyUbaKTjNvJ4zuVZ9YNIOigSj2BRU0sID_YQJ/zqska6hh723l5go/LaeJeffers10+Meshsmooth.rar" class="download-btn">Download LaeJeffers10 Meshsmooth</a>
         </li>
+	<li>
+            <strong>Lit LS Forum</strong>
+			<div class="button-container" style="text-align: center;">
+            <a href="https://www.mediafire.com/file/3enokpfz5b5hhba/Lit+LS+Forum.rar/file" class="download-btn">Download Lit LS Forum</a>
+        </li>
     </ul>
 </div>
 
