--- a/mods.html
+++ b/mods.html
@@ -505,6 +505,9 @@
         <li>
             <strong>Lit Gant Bridge</strong>
         </li>
+	<li>
+            <strong>Lit LS Forum</strong>
+        </li>
         <li>
             <strong>Lit Ocean Docks Bridge</strong>
         </li>
