--- a/mods.html
+++ b/mods.html
@@ -744,6 +744,9 @@
         <li>
             <strong>Save License Plate</strong>
         </li>
+	<li>
+            <strong>SaveLoader</strong>
+        </li>
         <li>
             <strong>Script Fixes</strong>
         </li>
