--- a/mods.html
+++ b/mods.html
@@ -745,7 +745,7 @@
             <strong>Save License Plate</strong>
         </li>
 	<li>
-            <strong>SaveLoader</strong>
+            <strong>III.VC.SA.SaveLoader v2.7</strong>
         </li>
         <li>
             <strong>Script Fixes</strong>
