--- a/mods.html
+++ b/mods.html
@@ -1951,6 +1951,9 @@
         <li>
             <strong>Animation Fix</strong>
         </li>
+	<li>
+            <strong>Assaltar pedestres com uma arma</strong>
+        </li>
         <li>
             <strong>Burned Peds</strong>
         </li>
