--- a/mods.html
+++ b/mods.html
@@ -1872,6 +1872,9 @@
         <li>
             <strong>Teargas Fix</strong>
         </li>
+	<li>
+            <strong>The holster on the cops</strong>
+        </li>
         <li>
             <strong>The Weapon Is On The Player</strong>
         </li>
