--- a/mods.html
+++ b/mods.html
@@ -1686,6 +1686,9 @@
         <li>
             <strong>Pickups Mod</strong>
         </li>
+	 <li>
+            <strong>Pills Bottle</strong>
+        </li>
         <li>
             <strong>Plane Beep</strong>
         </li>
