--- a/mods.html
+++ b/mods.html
@@ -546,6 +546,9 @@
         <li>
             <strong>Beta Definitive & Leftovers Map</strong>
         </li>
+	<li>
+            <strong>Beta Mexican gangs remaster</strong>
+        </li>
         <li>
             <strong>Beta Mulholland Safehouse</strong>
         </li>
