--- a/mods.html
+++ b/mods.html
@@ -561,6 +561,9 @@
         <li>
             <strong>Parked Binary IPL Fixes</strong>
         </li>
+	<li>
+            <strong>Traincross Fix</strong>
+        </li>
         <li>
             <strong>Beta Fence Smash</strong>
         </li>
