--- a/mods.html
+++ b/mods.html
@@ -553,22 +553,13 @@
             <strong>Beta Mulholland Safehouse</strong>
         </li>
         <li>
-            <strong>CJ Portrait Card Fix</strong>
-        </li>
-        <li>
-            <strong>Improved Models by StreetFonso</strong>
+            <strong>Improved Models</strong>
         </li>
         <li>
             <strong>Parked Binary IPL Fixes</strong>
         </li>
 	<li>
             <strong>Traincross Fix</strong>
-        </li>
-        <li>
-            <strong>Beta Fence Smash</strong>
-        </li>
-        <li>
-            <strong>Grotti Showroom</strong>
         </li>
     </ul>
     <div class="button-container" style="text-align: center;">
