--- a/mods.html
+++ b/mods.html
@@ -1404,6 +1404,9 @@
         <li>
             <strong>CJ Look Interest</strong>
         </li>
+	<li>
+            <strong>CJ Startup Clothes</strong>
+        </li>
         <li>
             <strong>Club Front Noise</strong>
         </li>
