--- a/mods.html
+++ b/mods.html
@@ -1405,7 +1405,7 @@
             <strong>CJ Look Interest</strong>
         </li>
 	<li>
-            <strong>CJ Startup Clothes</strong>
+            <strong>CJ Startup Settings</strong>
         </li>
         <li>
             <strong>Club Front Noise</strong>
