--- a/urbanize.html
+++ b/urbanize.html
@@ -454,6 +454,22 @@
     </a>
 </div>		
 
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KabXxICcVKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 02-25</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+    <li>Добавлено 80 человек на балконы домов и зданий по всему San Andreas! Наклоны, растяжки и т. д. При возникновении угрозы они возвращаются в дом.</li>
+    <li>Добавлена ​​группа нищих под мостом Willowfield LS bridge (включая объекты окружения).</li>
+    <li>Добавлено 550 мусорных мешков по всему Los Santos.</li>
+    </ul>
+   <a href="https://sharemods.com/zq7wlgmvjh4e/SA_-_Urbanize_12-24___40_ch4hioah__41_.zip.html" target="_blank">
+        <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
+            Скачать Urbanize 02-25
+        </button>
+    </a>
+</div>		
+
 <!-- Повторите блок video-item для дополнительных видео -->
 
     <button id="scroll-btn">⬆</button>
