--- a/mods.html
+++ b/mods.html
@@ -1148,6 +1148,9 @@
         <li>
             <strong>Rural Car Repairs</strong>
         </li>
+	<li>
+            <strong>SA Styled Speedometer</strong>
+        </li>
         <li>
             <strong>Save License Plate</strong>
         </li>
