--- a/mods.html
+++ b/mods.html
@@ -1879,7 +1879,7 @@
             <strong>Teargas Fix</strong>
         </li>
 	<li>
-            <strong>The holster on the cops</strong>
+            <strong>The holster on the cops v1.1</strong>
         </li>
         <li>
             <strong>The Weapon Is On The Player</strong>
