--- a/mods.html
+++ b/mods.html
@@ -1365,6 +1365,9 @@
         <li>
             <strong>Autosave & Checkpoint</strong>
         </li>
+	<li>
+            <strong>Ballas Greet You</strong>
+        </li>
         <li>
             <strong>Basketball Fix</strong>
         </li>
