--- a/mods.html
+++ b/mods.html
@@ -807,7 +807,7 @@
             <strong>Abs System</strong>
         </li>
         <li>
-            <strong>Advanced Nitro System</strong>
+            <strong>Advanced Nitro System v1.5</strong>
         </li>
         <li>
             <strong>Advanced Track Player</strong>
