--- a/mods.html
+++ b/mods.html
@@ -1666,7 +1666,7 @@
             <strong>Night Pimpin</strong>
         </li>
 	<li>
-            <strong>No Extra Air Resistance</strong>
+            <strong>No Extra Air Resistance v1.1</strong>
         </li>
         <li>
             <strong>NoRadio</strong>
