--- a/mods.html
+++ b/mods.html
@@ -1938,6 +1938,9 @@
         <li>
             <strong>weapon pickup</strong>
         </li>
+	<li>
+            <strong>Weapon Zoom Unlimited</strong>
+        </li>
         <li>
             <strong>WeaponRecoilAuto</strong>
         </li>
