--- a/mods.html
+++ b/mods.html
@@ -174,6 +174,9 @@
         <li>
             <strong>ReShade 6.3.3</strong>
         </li>
+	<li>
+            <strong>RGGSA2.0 ENB</strong>
+        </li>
         <li>
             <strong>Shadows Settings Extender v2.1.2</strong>
         </li>
