--- a/mods.html
+++ b/mods.html
@@ -1536,6 +1536,9 @@
         <li>
             <strong>Gravity Fix</strong>
         </li>
+	<li>
+            <strong>Grenade mod</strong>
+        </li>
         <li>
             <strong>Grove In Ganton</strong>
         </li>
