--- a/mods.html
+++ b/mods.html
@@ -1458,6 +1458,9 @@
         <li>
             <strong>Difficult Move In Water</strong>
         </li>
+	<li>
+            <strong>Disable jetpack heat effect</strong>
+        </li>
         <li>
             <strong>Diving Mod</strong>
         </li>
