--- a/mods.html
+++ b/mods.html
@@ -269,7 +269,7 @@
 	<li>
             <strong>Original Peds Vary Extended (Fixed)</strong>
             <div class="button-container" style="text-align: center;">
-                <a href="https://mega.nz/file/6JNX2byR#NDxmXHT4x4O2zoNAa7lxKCEpzJf4tldRgo5iCSzsjRo" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
+                <a href="https://mega.nz/file/nRVgnTLB#jmsAsGraClYNsBXadJpVO5NpE1FK20SsXdmrw_C-Icw" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
             </div>
         </li>
         <li>
