--- a/mods.html
+++ b/mods.html
@@ -499,6 +499,9 @@
         <li>
             <strong>Illuminated Vinewood Sign</strong>
         </li>
+	<li>
+            <strong>Improved Lamps</strong>
+        </li>
         <li>
             <strong>Improved Night Windows</strong>
         </li>
