--- a/mods.html
+++ b/mods.html
@@ -1857,6 +1857,9 @@
         <li>
             <strong>Spider Man Mod</strong>
         </li>
+	<li>
+            <strong>Split Screen for 2 Player Mode v1.2</strong>
+        </li>
         <li>
             <strong>Spray Can Stunlock Fix</strong>
         </li>
