--- a/mods.html
+++ b/mods.html
@@ -577,7 +577,7 @@
     <h2>ASI Plugins</h2>
     <ul>
         <li>
-            <strong>Asset Autocollector</strong>
+            <strong>Asset Autocollector v1.3.2</strong>
         </li>
         <li>
             <strong>AutoID</strong>
