--- a/mods.html
+++ b/mods.html
@@ -1050,7 +1050,7 @@
             <strong>Lean On The Bike</strong>
         </li>
         <li>
-            <strong>Manual Driveby Refixed v.25.02.08</strong>
+            <strong>Manual Driveby Refixed Update v.25.02.12</strong>
         </li>
         <li>
             <strong>Manual DriveBy Remake</strong>
