--- a/mods.html
+++ b/mods.html
@@ -1435,6 +1435,9 @@
             <strong>Commercial Mod</strong>
         </li>
 	<li>
+            <strong>Cop Radar</strong>
+        </li>
+	<li>
             <strong>Cops bulletproof</strong>
         </li>
         <li>
