--- a/mods.html
+++ b/mods.html
@@ -1573,6 +1573,9 @@
             <strong>Heli Pilots</strong>
         </li>
 	<li>
+            <strong>Helicopter in the sky</strong>
+        </li>
+	<li>
             <strong>Helicopter Plane Traffic</strong>
         </li>
         <li>
