--- a/mods.html
+++ b/mods.html
@@ -762,6 +762,9 @@
         <li>
             <strong>Starry Skies</strong>
         </li>
+	<li>
+            <strong>Story Mode 2.0 Bug Fixes</strong>
+        </li>
         <li>
             <strong>StreamMemFix</strong>
         </li>
