--- a/mods.html
+++ b/mods.html
@@ -1438,7 +1438,7 @@
             <strong>Commercial Mod</strong>
         </li>
 	<li>
-            <strong>Cop Radar</strong>
+            <strong>Cop N Threat Radar</strong>
         </li>
 	<li>
             <strong>Cops bulletproof</strong>
