--- a/mods.html
+++ b/mods.html
@@ -249,9 +249,9 @@
             </div>
         </li>
         <li>
-            <strong>RoSA Project Evolved - October v1.4</strong>
+            <strong>RoSA Project Evolved - December v1.4</strong>
             <div class="button-container" style="text-align: center;">
-                <a href="https://www.mediafire.com/file/dqlxvg2tjxf8yyw/RoSA+Project+Evolved+-+October.7z/file" class="download-btn">Download RoSA Project Evolved - October v1.4</a>
+                <a href="https://www.mediafire.com/file/ydmhfqcx36lv4f8/RoSA+Project+Evolved+-+December.7z" class="download-btn">Download RoSA Project Evolved - December v1.4</a>
             </div>
         </li>
 	<li>
