--- a/mods.html
+++ b/mods.html
@@ -1402,7 +1402,7 @@
             <strong>Burnout With Space</strong>
         </li>
         <li>
-            <strong>Buy Property Mod</strong>
+            <strong>Buy Property Mod + Properties Plus</strong>
         </li>
         <li>
             <strong>Camera Settings</strong>
