--- a/mods.html
+++ b/mods.html
@@ -1963,7 +1963,7 @@
             <strong>weapon pickup</strong>
         </li>
 	<li>
-            <strong>Weapon Zoom Unlimited</strong>
+            <strong>Weapon Zoom Unlimited Update v.25.02.15</strong>
         </li>
         <li>
             <strong>WeaponRecoilAuto</strong>
