--- a/mods.html
+++ b/mods.html
@@ -1158,7 +1158,7 @@
             <strong>Rural Car Repairs</strong>
         </li>
 	<li>
-            <strong>SA Styled Speedometer</strong>
+            <strong>SA Styled Speedometer Update v16/2/2025</strong>
         </li>
         <li>
             <strong>Save License Plate</strong>
