--- a/mods.html
+++ b/mods.html
@@ -613,7 +613,7 @@
             <strong>Disable Radar On Foot</strong>
         </li>
         <li>
-            <strong>Enterable Hidden Interiors</strong>
+            <strong>Enterable Hidden Interiors Update v16/2/2025</strong>
         </li>
         <li>
             <strong>Explosions</strong>
