--- a/mods.html
+++ b/mods.html
@@ -1549,7 +1549,7 @@
             <strong>Gravity Fix</strong>
         </li>
 	<li>
-            <strong>Grenade mod</strong>
+            <strong>Grenade mod Update v17.02.2005</strong>
         </li>
         <li>
             <strong>Grove In Ganton</strong>
