--- a/mods.html
+++ b/mods.html
@@ -1052,6 +1052,9 @@
         <li>
             <strong>Lean On The Bike</strong>
         </li>
+	<li>
+            <strong>Lock Car Doors</strong>
+        </li>
         <li>
             <strong>Manual Driveby Refixed Update v.25.02.12</strong>
         </li>
