--- a/mods.html
+++ b/mods.html
@@ -1010,6 +1010,9 @@
         <li>
             <strong>Full Radio Control</strong>
         </li>
+	<li>
+            <strong>Functional firefighter ladder</strong>
+        </li>
         <li>
             <strong>Gasoline Mod v2.5</strong>
         </li>
