--- a/mods.html
+++ b/mods.html
@@ -1626,6 +1626,9 @@
         <li>
             <strong>Improved Club</strong>
         </li>
+	<li>
+            <strong>Improved Gangs War</strong>
+        </li>
         <li>
             <strong>Improved Jetpack Control</strong>
         </li>
