--- a/mods.html
+++ b/mods.html
@@ -1383,6 +1383,9 @@
 	<li>
             <strong>Ballas Greet You</strong>
         </li>
+	<li>
+            <strong>Ballas Pull Up On You</strong>
+        </li>
         <li>
             <strong>Basketball Fix</strong>
         </li>
