--- a/mods.html
+++ b/mods.html
@@ -1521,6 +1521,9 @@
         <li>
             <strong>Fireman Fireproof Fix</strong>
         </li>
+	<li>
+            <strong>Fix Handle By Orion SR</strong>
+        </li>
         <li>
             <strong>Fix Plane Speed After Explodes</strong>
         </li>
@@ -1614,11 +1617,11 @@
         <li>
             <strong>High Noon Fix</strong>
         </li>
-		<li>
+	<li>
             <strong>Hit Scan Sniper</strong>
         </li>
-		<li>
-            <strong>Hood Fellas Shooting Dice</strong>
+	<li>
+            <strong>Hood Fellas Greeting You</strong>
         </li>
         <li>
             <strong>Hospital Health Pickups</strong>
