--- a/mods.html
+++ b/mods.html
@@ -1621,6 +1621,9 @@
             <strong>Hit Scan Sniper</strong>
         </li>
 	<li>
+            <strong>Hit the Entity Fix</strong>
+        </li>
+	<li>
             <strong>Hood Fellas Greeting You</strong>
         </li>
         <li>
