--- a/mods.html
+++ b/mods.html
@@ -1581,6 +1581,9 @@
         <li>
             <strong>Health Recovery And Blood Screen</strong>
         </li>
+	<li>
+            <strong>HealthBarColor</strong>
+        </li>
         <li>
             <strong>Heli Cam Lock</strong>
         </li>
