--- a/mods.html
+++ b/mods.html
@@ -1582,7 +1582,7 @@
             <strong>Health Recovery And Blood Screen</strong>
         </li>
 	<li>
-            <strong>HealthBarColor</strong>
+            <strong>Changeable health bar colors (depending on health %)</strong>
         </li>
         <li>
             <strong>Heli Cam Lock</strong>
