--- a/mods.html
+++ b/mods.html
@@ -603,6 +603,9 @@
         <li>
             <strong>CamShake</strong>
         </li>
+	<li>
+            <strong>Cheat Menu v3.52</strong>
+        </li>
         <li>
             <strong>ClassicHud</strong>
         </li>
