--- a/mods.html
+++ b/mods.html
@@ -1351,10 +1351,10 @@
             <strong>Advanced Aiming Mod (Presets)</strong>
         </li>
         <li>
-            <strong>Advanced Aiming Mod 1.4</strong>
+            <strong>Advanced Aiming Mod v1.4</strong>
         </li>
 	<li>
-            <strong>Aimless Mode v3</strong>
+            <strong>Aimless Mode</strong>
         </li>
         <li>
             <strong>Air Traffic</strong>
@@ -1366,7 +1366,7 @@
             <strong>Air Traffic Realism</strong>
         </li>
         <li>
-            <strong>Airplane Tire Skid</strong>
+            <strong>Airplane Tire Skid  v1.1</strong>
         </li>
         <li>
             <strong>Ammunition Seller</strong>
@@ -1375,7 +1375,7 @@
             <strong>Anim Train</strong>
         </li>
         <li>
-            <strong>Arrest Like In GTA 4 v1.1</strong>
+            <strong>Arrest Like In GTA 4</strong>
         </li>
         <li>
             <strong>Auto Remove Marker</strong>
@@ -1414,16 +1414,16 @@
             <strong>Burnout With Space</strong>
         </li>
         <li>
-            <strong>Properties Plus, Buy Properties mod v1.2.1</strong>
-        </li>
-        <li>
             <strong>Camera Settings</strong>
         </li>
-	<li>
+        <li>
             <strong>Ceiling Bird Chirp</strong>
         </li>
-        <li>
+	<li>
             <strong>Chainsaw Smoke</strong>
+        </li>
+        <li>
+            <strong>Changeable health bar colors (depending on health %)</strong>
         </li>
         <li>
             <strong>Ciggy & Antenna</strong>
@@ -1433,9 +1433,6 @@
         </li>
 	<li>
             <strong>CJ Startup Settings</strong>
-        </li>
-        <li>
-            <strong>Club Front Noise</strong>
         </li>
         <li>
             <strong>Clube Front Noise</strong>
@@ -1449,13 +1446,13 @@
         <li>
             <strong>Commercial Mod</strong>
         </li>
-	<li>
+        <li>
             <strong>Cop N Threat Radar</strong>
         </li>
 	<li>
             <strong>Cops bulletproof</strong>
         </li>
-        <li>
+	<li>
             <strong>Cops Faster and Climbing</strong>
         </li>
         <li>
@@ -1470,19 +1467,19 @@
         <li>
             <strong>Dealer Weapons</strong>
         </li>
-	<li>
-            <strong>Death animations Ragdoll Style v2.0</strong>
-        </li>
         <li>
-            <strong>DeathAnimsMod v2.0 (13.01.2025)</strong>
+            <strong>Death animations Ragdoll Style</strong>
+        </li>
+	<li>
+            <strong>DeathAnimsMod</strong>
         </li>
         <li>
             <strong>Difficult Move In Water</strong>
         </li>
-	<li>
+        <li>
             <strong>Disable jetpack heat effect</strong>
         </li>
-        <li>
+	<li>
             <strong>Diving Mod</strong>
         </li>
         <li>
@@ -1495,7 +1492,7 @@
             <strong>Driver</strong>
         </li>
         <li>
-            <strong>Drop Weapons Like In GTA IV v3.0</strong>
+            <strong>Drop Weapons Like In GTA IV</strong>
         </li>
         <li>
             <strong>Drug Dealer Fix</strong>
@@ -1509,10 +1506,10 @@
         <li>
             <strong>Ear Ringing Simple</strong>
         </li>
-	<li>
+        <li>
             <strong>EchoWeapons</strong>
         </li>
-        <li>
+	<li>
             <strong>Engine Volume</strong>
         </li>
         <li>
@@ -1524,10 +1521,10 @@
         <li>
             <strong>Fireman Fireproof Fix</strong>
         </li>
-	<li>
+        <li>
             <strong>Fix Handle By Orion SR</strong>
         </li>
-        <li>
+	<li>
             <strong>Fix Plane Speed After Explodes</strong>
         </li>
         <li>
@@ -1563,10 +1560,10 @@
         <li>
             <strong>Gravity Fix</strong>
         </li>
-	<li>
-            <strong>Grenade mod Update v17.02.2005</strong>
-        </li>
         <li>
+            <strong>Grenade mod</strong>
+        </li>
+	<li>
             <strong>Grove In Ganton</strong>
         </li>
         <li>
@@ -1584,25 +1581,22 @@
         <li>
             <strong>Health Recovery And Blood Screen</strong>
         </li>
-	<li>
-            <strong>Changeable health bar colors (depending on health %)</strong>
-        </li>
         <li>
             <strong>Heli Cam Lock</strong>
         </li>
-        <li>
+	<li>
             <strong>Heli Pilots</strong>
         </li>
-	<li>
+        <li>
             <strong>Helicopter in the sky</strong>
         </li>
-	<li>
+        <li>
             <strong>Helicopter Plane Traffic</strong>
         </li>
-        <li>
+	<li>
             <strong>Helicopter Traffic</strong>
         </li>
-        <li>
+	<li>
             <strong>Helicopters In The Sky</strong>
         </li>
         <li>
@@ -1623,50 +1617,50 @@
         <li>
             <strong>High Noon Fix</strong>
         </li>
-	<li>
+        <li>
             <strong>Hit Scan Sniper</strong>
         </li>
-	<li>
+        <li>
             <strong>Hit the Entity Fix</strong>
         </li>
 	<li>
             <strong>Hood Fellas Greeting You</strong>
         </li>
-        <li>
+	<li>
             <strong>Hospital Health Pickups</strong>
         </li>
-        <li>
+	<li>
             <strong>Improved Barber</strong>
         </li>
         <li>
             <strong>Improved Club</strong>
         </li>
-	<li>
+        <li>
             <strong>Improved Gangs War</strong>
         </li>
         <li>
             <strong>Improved Jetpack Control</strong>
         </li>
-        <li>
+	<li>
             <strong>IndieVehHandlings</strong>
         </li>
-	<li>
-            <strong>Inmune Headshot/strong>
+        <li>
+            <strong>Inmune Headshot</strong>
         </li>
         <li>
             <strong>Insects Mod</strong>
         </li>
-        <li>
+	<li>
             <strong>Instakill</strong>
         </li>
         <li>
             <strong>Inventory System</strong>
         </li>
         <li>
-            <strong>Jetpack Adjuster</strong>
+            <strong>JetPack Adjuster</strong>
         </li>
         <li>
-            <strong>Kill Cam v1.5</strong>
+            <strong>Kill Cam</strong>
         </li>
         <li>
             <strong>Lamppost Insects</strong>
@@ -1677,41 +1671,41 @@
         <li>
             <strong>Light Destroyer</strong>
         </li>
-		<li>
+        <li>
             <strong>Lighted barriers</strong>
         </li>
-		<li>
+        <li>
             <strong>Lighthouse & Pyramid Fix</strong>
         </li>
-        <li>
+		<li>
             <strong>Long Trains</strong>
         </li>
-        <li>
+		<li>
             <strong>Luxury Cars Attract The Attention Of Pedestrians</strong>
         </li>
-	<li>
-            <strong>Manhunt Sneak Kills v2.0</strong>
+        <li>
+            <strong>Manhunt Sneak Kills</strong>
         </li>
         <li>
             <strong>Mod Suck Rolls For 50 Stories</strong>
         </li>
-        <li>
+	<li>
             <strong>Modernized DriveBy</strong>
         </li>
         <li>
             <strong>Money Drop Fix</strong>
         </li>
         <li>
-            <strong>More Radar Icons Update (17/1/2025)</strong>
+            <strong>More Radar Icons</strong>
         </li>
-	<li>
-            <strong>News Paper v2.0</strong>
+        <li>
+            <strong>News Paper</strong>
         </li>
         <li>
             <strong>Night Pimpin</strong>
         </li>
 	<li>
-            <strong>No Extra Air Resistance v1.1</strong>
+            <strong>No Extra Air Resistance</strong>
         </li>
         <li>
             <strong>NoRadio</strong>
@@ -1722,7 +1716,7 @@
         <li>
             <strong>One Wanted Star Melee Fix</strong>
         </li>
-        <li>
+	<li>
             <strong>Original Drug Dealers</strong>
         </li>
         <li>
@@ -1737,29 +1731,32 @@
         <li>
             <strong>Pickups Mod</strong>
         </li>
-	 <li>
+        <li>
             <strong>Pills Bottle</strong>
         </li>
         <li>
             <strong>Plane Beep</strong>
         </li>
-        <li>
+	 <li>
             <strong>Plane Explode Fix</strong>
         </li>
         <li>
             <strong>Planes Inertia</strong>
         </li>
-	<li>
-            <strong>Planning Department v1.0</strong>
+        <li>
+            <strong>Planning Department</strong>
         </li>
         <li>
             <strong>Player Move Head</strong>
         </li>
-        <li>
+	<li>
             <strong>Police Dept Fix</strong>
         </li>
         <li>
-            <strong>Quick Map v29.05.2024</strong>
+            <strong>Properties Plus, Buy Properties mod v1.2.1</strong>
+        </li>
+        <li>
+            <strong>Quick Map</strong>
         </li>
         <li>
             <strong>Quick Weapon Draw</strong>
@@ -1767,10 +1764,10 @@
         <li>
             <strong>Radar Zoom</strong>
         </li>
-	<li>
-            <strong>Radio Effects v1.1</strong>
-        </li>
         <li>
+            <strong>Radio Effects</strong>
+        </li>
+	<li>
             <strong>Rain Audio Fix</strong>
         </li>
         <li>
@@ -1786,12 +1783,12 @@
             <strong>Random Train Drivers</strong>
         </li>
         <li>
-            <strong>Cleo Real Time</strong>
-        </li>
-	<li>
-            <strong>Real Weapons Names</strong>
+            <strong>Real Time</strong>
         </li>
         <li>
+            <strong>Real Weapons Names</strong>
+        </li>
+	<li>
             <strong>Realistic Beach</strong>
         </li>
         <li>
@@ -1807,7 +1804,7 @@
             <strong>Restored Icons</strong>
         </li>
         <li>
-            <strong>Rubbish like in GTA 4 v2.0</strong>
+            <strong>Rubbish GTA 4</strong>
         </li>
         <li>
             <strong>Run</strong>
@@ -1890,10 +1887,10 @@
         <li>
             <strong>Spider Man Mod</strong>
         </li>
-	<li>
-            <strong>Split Screen for 2 Player Mode v1.2</strong>
-        </li>
         <li>
+            <strong>Split Screen for 2 Player Mode</strong>
+        </li>
+	<li>
             <strong>Spray Can Stunlock Fix</strong>
         </li>
         <li>
@@ -1902,10 +1899,10 @@
         <li>
             <strong>Stealth Kill Camera</strong>
         </li>
-	<li>
-            <strong>Store Expulsion v1.0</strong>
-        </li>
         <li>
+            <strong>Store Expulsion</strong>
+        </li>
+	<li>
             <strong>Stowaway Mission Weapons Fix</strong>
         </li>
         <li>
@@ -1917,7 +1914,7 @@
         <li>
             <strong>Sun</strong>
         </li>
-	<li>
+        <li>
             <strong>SWAT Helicopter</strong>
         </li>
 	<li>
@@ -1926,13 +1923,13 @@
 	<li>
             <strong>Swat Pos</strong>
         </li>
-        <li>
+	<li>
             <strong>Teargas Fix</strong>
         </li>
-	<li>
-            <strong>The holster on the cops v1.1</strong>
-        </li>
         <li>
+            <strong>The holster on the cops</strong>
+        </li>
+	<li>
             <strong>The Weapon Is On The Player</strong>
         </li>
         <li>
@@ -1944,10 +1941,10 @@
         <li>
             <strong>Tiring Sounds</strong>
         </li>
-	<li>
+        <li>
             <strong>TweaksV v55</strong>
         </li>
-        <li>
+	<li>
             <strong>Unlimited Camera Ammo</strong>
         </li>
         <li>
@@ -1981,15 +1978,15 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills v3.0 26.01.2025</strong>
+            <strong>Weapon Detaills</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
         </li>
-	<li>
-            <strong>Weapon Zoom Unlimited Update v.25.02.15</strong>
-        </li>
         <li>
+            <strong>Weapon Zoom Unlimited</strong>
+        </li>
+	<li>
             <strong>WeaponRecoilAuto</strong>
         </li>
         <li>
@@ -1997,6 +1994,7 @@
         </li>
         <li>
             <strong>Weather Forecast</strong>
+        </li>
     </ul>
 	<div class="button-container" style="text-align: center;">
     <a href="https://github.com/Maxim1993271/GTA/releases/download/DifferentCleoPlugins/Different.Cleo.Plugins.rar" class="download-btn">Download Different Cleo Plugins</a>
