--- a/mods.html
+++ b/mods.html
@@ -1699,7 +1699,7 @@
             <strong>More Radar Icons</strong>
         </li>
         <li>
-            <strong>News Paper</strong>
+            <strong>News papers v2.1</strong>
         </li>
         <li>
             <strong>Night Pimpin</strong>
