--- a/mods.html
+++ b/mods.html
@@ -1177,10 +1177,6 @@
         </li>
         <li>
             <strong>SkidBlow</strong>
-        </li>
-		<li>
-            <strong>SmarterCopDecisions</strong>
-        </li>
         <li>
             <strong>Speedo2077</strong>
         </li>
@@ -1874,6 +1870,9 @@
         </li>
         <li>
             <strong>Sleep</strong>
+        </li>
+	<li>
+            <strong>Smarter Cop Decisions</strong>
         </li>
         <li>
             <strong>Sniper Realism</strong>
