--- a/mods.html
+++ b/mods.html
@@ -1152,7 +1152,7 @@
             <strong>Real Traffic Fix</strong>
         </li>
         <li>
-            <strong>Rear Lights Mod v3.4 01.02.2025</strong>
+            <strong>Rear Lights Mod v3.4 Update 23.02.2025</strong>
         </li>
         <li>
             <strong>Remote Lock Car</strong>
