--- a/mods.html
+++ b/mods.html
@@ -1535,6 +1535,9 @@
         <li>
             <strong>Fixed Cam Mod</strong>
         </li>
+	<li>
+            <strong>Flashing Wanted Stars</strong>
+        </li>
         <li>
             <strong>Food Eating Fix</strong>
         </li>
