--- a/mods.html
+++ b/mods.html
@@ -775,7 +775,7 @@
             <strong>The Birds Update</strong>
         </li>
         <li>
-            <strong>VC Banners And Trails</strong>
+            <strong>VC Plane Trails And Banners</strong>
         </li>
         <li>
             <strong>VC Bullet Trails</strong>
