--- a/mods.html
+++ b/mods.html
@@ -1629,6 +1629,9 @@
             <strong>Hospital Health Pickups</strong>
         </li>
 	<li>
+            <strong>HUD Colors</strong>
+        </li>
+	<li>
             <strong>Improved Barber</strong>
         </li>
         <li>
