--- a/mods.html
+++ b/mods.html
@@ -1988,6 +1988,9 @@
         <li>
             <strong>weapon pickup</strong>
         </li>
+	<li>
+            <strong>Weapon Pickup Maker</strong>
+        </li>
         <li>
             <strong>Weapon Zoom Unlimited</strong>
         </li>
