--- a/mods.html
+++ b/mods.html
@@ -1814,6 +1814,9 @@
         <li>
             <strong>Rusty Brown's Ring Donuts</strong>
         </li>
+	<li>
+            <strong>RZL-Trainer</strong>
+        </li>
         <li>
             <strong>SA Homies Mod</strong>
         </li>
