--- a/mods.html
+++ b/mods.html
@@ -1544,6 +1544,9 @@
         <li>
             <strong>Galo Cinza</strong>
         </li>
+	<li>
+            <strong>Gang Weapons Unlimited Randomizer (beta)</strong>
+        </li>
         <li>
             <strong>Gangs Guns Variations</strong>
         </li>
