--- a/mods.html
+++ b/mods.html
@@ -71,6 +71,9 @@
         <li>
             <strong>Ultimate ASI Loader v7.8.0</strong>
         </li>
+	<li>
+            <strong>Silent’s ASI Loader v1.3</strong>
+        </li>
         <li>
             <strong>CLEO v4.4.4</strong>
         </li>
