--- a/mods.html
+++ b/mods.html
@@ -1170,7 +1170,7 @@
             <strong>Rural Car Repairs</strong>
         </li>
 	<li>
-            <strong>SA Styled Speedometer Update v16/2/2025</strong>
+            <strong>SA Styled Speedometer Update v(1/3/2025)</strong>
         </li>
         <li>
             <strong>Save License Plate</strong>
