--- a/mods.html
+++ b/mods.html
@@ -1998,7 +1998,7 @@
             <strong>weapon pickup</strong>
         </li>
 	<li>
-            <strong>Weapon Pickup Maker</strong>
+            <strong>Weapon Pickup Maker v(1/3/2025)</strong>
         </li>
         <li>
             <strong>Weapon Zoom Unlimited</strong>
